# tokentra

./: .env.example  .env.local  COSTLENS_AI_ARCHITECTURE.md  PRD_CostLens_AI.docx  PRE_LAUNCH_SECURITY_AUDIT.md  README.md  TokenTra_Usage_System.md  bun.lockb  netlify.toml  package-lock.json  package.json
.github/workflows/: update-model-pricing.yml
docs/: OPTIMIZATION_ENGINE_ARCHITECTURE.md  README.md  TOKENTRA_BACKEND_ARCHITECTURE.md  api-reference.md  best-practices.md  getting-started.md  provider-setup.md  sdk-guide.md
scripts/: reset-database.sql  test-budget-api.ts.bak  test-email-onboarding.ts  test-ftue.ts  test-integrations.ts  test-organization-api.ts.bak  test-provider-apis.ts  test-sdk.ts  update-model-pricing.ts
sdk-python/: README.md  pyproject.toml
sdk-python/tokentra/: __init__.py  client.py  errors.py  pricing.py
sdk/typescript/: README.md  package.json
src/: middleware.ts
src/app/: error.tsx  globals.css  layout.tsx  page.tsx
src/data/: index.ts  mock-alerts.ts  mock-budgets.ts  mock-cost-centers.ts  mock-costs.ts  mock-projects.ts  mock-providers.ts  mock-recommendations.ts  mock-reports.ts  mock-teams.ts  mock-usage.ts  mock-users.ts
src/hooks/: index.ts  use-alerts.ts  use-api-keys.ts  use-budgets.ts  use-cost-analysis.ts  use-cost-centers.ts  use-costs.ts  use-dashboard-data.ts  use-date-range.ts  use-debounce.ts  use-filters.ts  use-integrations.ts  use-local-storage.ts  use-media-query.ts  use-notification-preferences.ts  use-notifications.ts  use-optimization.ts  use-organization.ts  use-projects.ts  use-providers.ts  use-realtime.ts  use-reports.ts  use-settings.ts  use-teams.ts  use-usage.ts
src/lib/: config.ts  constants.ts  utils.ts
src/services/: alert-service.ts  auth-service.ts  budget-service.ts  cost-service.ts  index.ts  notification-service.ts  optimization-service.ts  project-service.ts  provider-service.ts  report-service.ts  reports-service.ts  team-service.ts  usage-service.ts
src/stores/: app-store.ts  auth-store.ts  dashboard-store.ts  filter-store.ts  index.ts  notification-store.ts  organization-store.ts  preferences-store.ts  ui-store.ts
src/types/: alerts.ts  api.ts  auth.ts  budgets.ts  costs.ts  index.ts  models.ts  notifications.ts  organization.ts  projects.ts  providers.ts  recommendations.ts  report.ts  teams.ts  (+4 more)
(+496 files in other folders)
